# goblint-snakemake

./: .gitignore  Snakefile  compare.ipynb  config.yaml  evaluate.ipynb  example_tool.py  helpers.py  main.py  pyproject.toml
data/: input3.txt
wrappers/goblint/: wrapper.py
